--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "private": true,
+  "name": "google-keep-to-clipboard",
+  "description": "A tiny browser extension to copy the contents of Google Keep notes to the clipboard in various formats.",
+  "version": "1.2.0",
+  "license": "GPL-3.0-only",
+  "author": "cheap glitch <cheap.glitch@gmail.com> (https://github.com/cheap-glitch)",
+  "main": "",
   "scripts": {
-    "lint": "eslint src/*.js"
+    "lint": "eslint '**/*.js'"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
