--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "google-keep-to-clipboard",
   "description": "A tiny browser extension to copy the contents of Google Keep notes to the clipboard in various formats.",
   "version": "1.2.0",
-  "license": "LGPL-3.0-only",
+  "license": "MPL-2.0",
   "author": "cheap glitch <cheap.glitch@gmail.com> (https://github.com/cheap-glitch)",
   "scripts": {
     "lint": "eslint '**/*.js'"
