--- a/package.json
+++ b/package.json
@@ -6,10 +6,23 @@
   "license": "MPL-2.0",
   "author": "cheap glitch <cheap.glitch@gmail.com> (https://github.com/cheap-glitch)",
   "scripts": {
-    "lint": "eslint '**/*.js'"
+    "build": "node build.js",
+    "lint": "run-s 'lint:*'",
+    "lint:js": "eslint '**/*.js'",
+    "lint:webext": "web-ext lint",
+    "serve": "cross-env GTK_THEME=Numix:light web-ext run --firefox-profile dev --keep-profile-changes --url about:debugging#/runtime/this-firefox"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
+    "cross-zip": "^3.1.0",
     "eslint": "^7.2.0",
-    "eslint-plugin-smarter-tabs": "^1.1.1"
+    "eslint-plugin-smarter-tabs": "^1.1.1",
+    "fs-extra": "^9.0.1",
+    "html-minifier": "^4.0.0",
+    "klaw-sync": "^6.0.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "terser": "^4.8.0",
+    "web-ext": "^4.2.0"
   }
 }
