--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
 	],
 
 	"rules": {
+    "brace-style":               ["warn", "1tbs", { "allowSingleLine": true }],
+
 		"no-irregular-whitespace":   0,
 		"no-mixed-spaces-and-tabs":  ["warn", "smart-tabs"],
 
